kubect_deploy/maintenance-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: maintenance-page
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: maintenance-page
    spec:
      containers:
      - name: maintenance-page
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/cloud-platform/maintenance:0.2.0 
        ports:
        - containerPort: 8080
