kubect_deploy/maintenance-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: maintenance-page-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: man-page.apps.cloud-platform-live-0.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: maintenance-page-svc
          servicePort: 80
